# plot

./: .gitignore  .windsurfrules  CMakeLists.txt  DEVELOPMENT_PLAN.md  LICENSE  README.md  config.example.json  config.json  integration_plan.md  main.cpp  processed_sales_data.csv  pyproject.toml  requirements.txt  setup.py  start_integrated_system.py
.taskmaster/: config.json
.taskmaster/docs/: prd.txt
.windsurf/: mcp.json
Core/: CMakeLists.txt  DataModel.cpp  DataModel.h  UndoRedoCommand.h  UndoRedoManager.cpp  UndoRedoManager.h
Core/templates/: sci_template.json
GUI/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  PlotView.cpp  PlotView.h  mainwindow.qrc  mainwindow.ui
Modules/: CMakeLists.txt  TemplateCommand.cpp  TemplateManager.cpp
backend/: README.md  alembic.ini  app.db  requirements.txt  requirements_simple.txt  start.ps1  start.sh
backend/app/: __init__.py  initial_data.py  main.py
backend/app/api/: dependencies.py
backend/app/api/api_v1/: api.py
backend/app/api/endpoints/: __init__.py  auth.py  datasets.py  health.py  visualizations.py
backend/app/core/: config.py  security.py
backend/app/crud/: __init__.py  visualization.py
backend/app/db/: __init__.py  base.py  base_class.py  database.py  init_db.py
backend/app/db/migrations/: env.py
backend/app/models/: __init__.py  base.py  dataset.py  user.py  visualization.py
backend/app/schemas/: __init__.py  dataset.py  token.py  user.py  visualization.py
backend/migrations/: env.py
backend/migrations/versions/: 796d68a6c155_add_visualizations_table.py
backend/scripts/: init_db.py  makemigrations.py  test.sh
backend/tests/: conftest.py  test_main.py  test_models.py  test_security.py  utils.py
backend/tests/api/endpoints/: test_auth.py  test_users.py
docs/: user_guide.md
examples/: data_cleaning_workflow.py  data_preprocessing_example.py  visualization_analysis_example.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: AnalysisPanel.tsx  ChartContainer.tsx  DataPreview.tsx  DataUpload.tsx  ExportPanel.tsx  Login.tsx
frontend/src/components/charts/: BarChart.tsx  BaseChart.tsx  CustomCurveChart.tsx  HeatmapChart.tsx  LineChart.tsx  PieChart.tsx  Scatter3D.tsx  ScatterChart.tsx  index.ts
frontend/src/components/charts/three/: README.md  Scene.tsx  Surface3D.tsx  index.ts
frontend/src/examples/: Scatter3DExample.tsx
frontend/src/hooks/: useDataManager.ts  useResponsiveChart.ts
frontend/src/services/: analysisService.ts
frontend/src/types/: chart.d.ts  chart.ts  chart3d.d.ts
frontend/src/utils/: chart3dUtils.ts
plan/: README.md  development_guide.md  git_workflow.md  implementation_plan.md  resources.md  timeline.md
src/scientific_analysis/: __init__.py  config.py  main.py
src/scientific_analysis/analysis/: __init__.py  base.py  clustering.py  correlation.py  descriptive.py  descriptive_outlier_detection.py  regression.py
src/scientific_analysis/config/: config_manager.py
src/scientific_analysis/data/: __init__.py  io.py  manager.py  preprocessing.py
src/scientific_analysis/integration/: api_client.py  web_view.py
src/scientific_analysis/models/: __init__.py  base_model.py  dataset.py
src/scientific_analysis/ui/: analysis_panel.py  login_dialog.py  main_window.py  visualization_panel.py
src/scientific_analysis/ui/dialogs/: __init__.py  preprocessing_dialog.py
src/scientific_analysis/ui/widgets/: __init__.py  data_table.py
src/scientific_analysis/utils/: __init__.py  logger.py  resources.py
src/scientific_analysis/visualization/: __init__.py  advanced.py  base.py  basic.py  charts.py  exporter.py  interactive.py  style.py
src/scientific_analysis_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_clustering_analyzer.py  test_correlation_analyzer.py  test_data_manager.py  test_descriptive_analyzer.py  test_preprocessing.py  test_regression_analyzer.py  test_visualization.py
