# CMakeLists.txt for the Modules directory
# This can be populated later when modules/plugins are added.

# Example for a placeholder library if needed, or leave empty if subdirectories will be added later.
# add_library(Modules_Placeholder STATIC empty_module.cpp) # Requires an empty_module.cpp

# Or simply leave it empty for now if no targets are defined directly in this directory yet.

# Add a message to indicate this file is processed
# message(STATUS "Processing CMakeLists.txt in Modules directory")
